# gestionale01

./: .gitignore  README.md  pyproject.toml
src/gestionale01/: __init__.py  cli.py  models.py  storage.py  web.py
src/gestionale01/templates/: base.html  form.html  index.html  login.html
