[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gestionale01"
version = "0.1.0"
description = "Gestione parco automezzi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Flask>=3.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gestionale01 = ["templates/*.html"]
